# thesis26

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  bench_config.toml  build.rs  refactor_baseline.md  refactor_phase5_catalog.md
.claude/agents/: ao-hash-security-sot.md  measurement-provenance-auditor.md  proving-architecture-sot.md  security-anonymity-sot.md  signatures-sot.md  thesis-consistency-auditor.md  zkvm-precompile-measurement-sot.md
abst_Takumi2025/: latexmkrc  main.tex  ref.bib  sakolab-summary.sty  slide_conclusion.xml  slide_future_work.xml
abst_Takumi2025/sections/: 01-introduction.tex  03-theoretical.tex  04-system.tex  05-evaluation.tex  06-discussion.tex  07-conclusion.tex
docs/: BDEC_VC_LIKE_MAPPING.md  LOQUAT_PAPER_2024-868_TABLE3.json  LOQUAT_PAPER_2024-868_TABLE3.md  LOQUAT_RUST_BENCHMARKING.md  LOQUAT_RUST_TABLE3_GRiffin.out.txt  PROSEC2024_BDEC_MAPPING.md  a5a6_draft_20260606.md  bdec_plum_risc0_cost_calculation_20260529.md  boundless_setup.md  claim_graph_20260610.json  cost_model_repair_20260610.json  deck_format_spec_20260616.md  discrepancies.csv  discrepancy_sweep_20260610.json  eprint_relevance_audit_20260614.md  experiments.csv  external_validity_findings_20260610.json  external_validity_findings_20260610.md  four_scheme_benchmark.md  gap_sweep_and_griffin_finding_20260614.md  known_issues_20260629.md  measurements_inventory_20260616.xlsx  motivation_evidence_20260614.md  p5_masked_pqzk.md  pc_prove_extrapolation.md  phase3_griffin_air_column_layout.md  phase3_griffin_air_next_session.md  phase3_griffin_air_plan.md  phase3_griffin_integration_b_design.md  plum_aurora_custom_snark_build.md  plum_in_bdec_blocker_20260529.md  plum_in_bdec_integration_plan_20260529.md  precompile_engineering_cost.md  proving_architecture_map_20260624.md  r_static_finding_20260605.md  risc0_prove_failure_finding_20260530.md  s9_thesis_integration_draft_20260611.md  sako_reframe_recovery_20260529.md  security_reductions_draft_20260606.md  security_spine_it_anonymity_20260616.md  (+13 more)
docs/experiment_plans/: 00-index.md  01-risc0-cregen-composite.md  02-sp1-cregen-prove.md  03-sp1-showcre-k1.md  04-loquat-in-zkvm-sp1.md  06-aurora-zk-enabled.md
docs/measurements/: gnark_plonk_wrap_ram_20260629_RESULT.md
docs/precompile_soundness/: griffin_fp192.md  uint256_mul_for_fp192.md
docs/sako_audits/: deck_snapshot.txt  learner_audit_20260615.md  log.md  watch_state.txt
docs/sako_review_panels_20260610/: mizuno_mthesis_panel_raw.txt  mizuno_mthesis_sako_comments_parsed.md  slack_discuss_mthesis_2025_sako.md
noir/: README.md
noir/loquat_lib/: Nargo.toml
results/: bench_1774369302.jsonl  bench_1774402471.jsonl  bench_1774479227.jsonl  bench_1774479456.jsonl  bench_1774479695.jsonl  bench_1774491083.jsonl  bench_1774491326.jsonl  bench_1774513626.jsonl  bench_1776145971.jsonl  bench_1776147058_b7_b5_only.jsonl.bak  bench_1776507403.jsonl  bench_b1_b2_rerun.jsonl  bench_b2_rerun2.jsonl  bench_b6_zkvm_dev_20260416_222710.jsonl  bench_m5pro_b3.jsonl  bench_m5pro_remaining.jsonl  bench_post_aurora_fix.jsonl  bench_results.xlsx  bench_smoke.jsonl  create_analysis.py  create_plots.py  devmode_sweep_20260511.README.md  devmode_sweep_20260511.csv  devmode_sweep_20260511.jsonl  loquat_attribution_20260512_020012.README.md  loquat_attribution_20260512_020012.jsonl  loquat_attribution_20260512_020012_griffin_bench.json  loquat_fp_attribution_20260512_022804.README.md  loquat_fp_attribution_20260512_022804.jsonl  loquat_fp_attribution_20260512_022804_griffin_bench.json  loquat_only_20260512.README.md  loquat_only_20260512.jsonl  loquat_only_multi_20260512_003912.README.md  loquat_only_multi_20260512_003912.csv  loquat_only_multi_20260512_003912.jsonl  loquat_three_level_20260512_024956.README.md  loquat_three_level_20260512_024956.jsonl  loquat_three_level_20260512_024956_fp127_bench.json  loquat_three_level_20260512_024956_fp2_bench.json  loquat_three_level_20260512_024956_griffin_bench.json  (+10 more)
results/analysis/: thesis_bench_analysis.xlsx
results/anchor_20260511_030057/: anchor.status
results/bench_run_20260415_171953/: manifest.txt
results/bench_run_20260415_172158/: bench_runner_B1_noir.jsonl  bench_runner_B2_r1cs_compare.jsonl  bench_runner_B3_circuit_scale.jsonl  bench_runner_B4_backend.jsonl  bench_runner_B5_griffin.jsonl  bench_runner_B7_aurora_rerun.jsonl  manifest.txt
results/bench_run_20260415_230747/: manifest.txt
results/bench_run_20260415_230844/: manifest.txt
results/bench_run_20260415_230848/: manifest.txt
results/bench_run_20260415_232554/: manifest.txt
results/bench_run_20260416_002710/: libiop_aurora.jsonl  manifest.txt
results/bench_run_20260416_004806/: libiop_aurora.jsonl  manifest.txt
results/bench_run_20260416_012800/: manifest.txt
results/bench_run_20260416_112256/: manifest.txt  (+2 more)
scripts/: anchor_run.sh  anchor_status.sh  audit5_campaign_20260612.sh  build_thesis_status_report.py  compute_fp127_constants.py  compute_fp192_constants.py  fp127_aurora_probe.cpp  fp127_aurora_probe.sh  fp127_aurora_runner.cpp  fp127_aurora_runner.sh  fp127_fractal_runner.cpp  fp127_fractal_runner.sh  fp127_sanity.cpp  fp127_sanity.sh  ingest_b5_b9_to_xlsx.py  loquat_only_analyse.py  loquat_remeasure_rhostar.sh  plot_attribution.py  pub_hardening_runs.sh  run_all_suites.sh  run_benchmarks.sh  run_loquat_table3_griffin.sh  s1_repeats_20260613.sh
spec/: griffin_precompile.md  plum_implementation_plan.md
src/: lib.rs  main.rs
tests/: d3_unlinkability.rs  euf_cma.rs  plum_field_primality.rs  pp2_revocation.rs  pp3_policy.rs  snark_harness.rs
zkvm/methods/guest/: Cargo.toml
修論2025_Takumi/: 01-intro.tex  02-background.tex  02-related.tex  03-preliminaries.tex  04-theoretical.tex  05-evaluation.tex  05-system.tex  055-security.tex  06-discussion.tex  06-evaluation.tex  07-conclusion.tex  07-discussion.tex  08-conclusion.tex  appendices.tex  jieeetran.bst  main 2.fls  main.aux  main.bbl  main.blg  main.dvi  main.fdb_latexmk  main.fls  main.lof  main.lot  main.tex  main.toc  ref.bib  sakolab-thesis.sty  story-coherence-audit.md  thesis-completion-workflow.md
(+235 files in other folders)
