[package]
name = "vc-pqc"
version = "0.1.0"
edition = "2024"

[lib]
name = "vc_pqc"
path = "src/lib.rs"

[features]
default = ["std"]
std = []
guest = []
snark_harness = []
euf_cma_harness = []
libiop_multicore = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"
sha3 = "0.10"
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
once_cell = "1.19"
num-bigint = "0.4"
num-traits = "0.2"
serde_json = "1.0"
toml = { version = "0.8", features = ["parse"] }
# B1 — decode nargo >= 1.0.0-beta.17 binary ACIR (base64 → gzip → MessagePack).
base64 = "0.22"
flate2 = "1.0"
rmpv = "1.3"

[build-dependencies]
cmake = "0.1.54"
