[package]
name = "vc-pqc"
version = "0.1.0"
edition = "2024"

[lib]
name = "vc_pqc"
path = "src/lib.rs"

[features]
default = ["std"]
# `std` pulls in the host-side / std-only deps used by bench/, bin/, bdec/,
# PLUM, and snarks/. Loquat-verify-only consumers should use
# `default-features = false, features = ["guest"]` and stay no_std.
std = [
    "dep:rand",
    "dep:rand_chacha",
    "dep:bincode",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:serde_json",
    "dep:toml",
    "dep:base64",
    "dep:flate2",
    "dep:rmpv",
    "serde/std",
    "sha2/std",
    "sha3/std",
    "num-bigint/std",
    "num-traits/std",
    "once_cell/std",
]
guest = []
snark_harness = []
euf_cma_harness = []
libiop_multicore = []

[dependencies]
# Unconditional (no_std-capable; minimum needed for Loquat verify).
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
once_cell = { version = "1.19", default-features = false, features = ["alloc"] }
num-bigint = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }

# Optional — pulled in by `std` feature. Loquat-verify in no_std mode
# (e.g. Jolt guest) does not need any of these.
rand = { version = "0.8", optional = true }
rand_chacha = { version = "0.3", optional = true }
bincode = { version = "1.3", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }
serde_json = { version = "1.0", optional = true }
toml = { version = "0.8", features = ["parse"], optional = true }
# B1 — decode nargo >= 1.0.0-beta.17 binary ACIR (base64 → gzip → MessagePack).
base64 = { version = "0.22", optional = true }
flate2 = { version = "1.0", optional = true }
rmpv = { version = "1.3", optional = true }

[build-dependencies]
cmake = "0.1.54"
