[package]
name = "zkvm_risc0"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# `std` enabled so the PLUM guest binary can use `std::collections::*`
# transitively via the PLUM modules (Loquat is no_std and ignores it).
risc0-zkvm = { version = "^3.0.3", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
sha2 = { version = "0.10", default-features = false }
bincode = "1.3"
# vc-pqc: keep both "guest" (Loquat side) and "std" (PLUM side
# needs std::collections for HashMap/HashSet in plum::*).
vc-pqc = { path = "../../..", default-features = false, features = ["guest", "std"] }

# PLUM guest binary (Phase 10 — runs plum_verify inside risc0 and
# commits the cycle-attribution counters). SHA3-256 hasher variant.
[[bin]]
name = "plum_verify"
path = "src/bin/plum_verify.rs"

# Griffin-hasher variant of the same binary (Phase 11). The host
# runs both back-to-back to compare three-level attribution.
[[bin]]
name = "plum_verify_griffin"
path = "src/bin/plum_verify_griffin.rs"
